<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/timer_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/enterHoursEditText"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/h"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/default_zero"
                android:textAlignment="center"
                android:theme="@style/Theme.Pomodoro" />

            <TextView
                android:id="@+id/colon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="40dp"
                android:text="@string/colon"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/enterMinutesEditText"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/m"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/default_minute"
                android:textAlignment="center"
                android:theme="@style/Theme.Pomodoro" />

            <TextView
                android:id="@+id/colon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="40dp"
                android:text="@string/colon"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/enterSecondsEditText"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/s"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/default_zero"
                android:textAlignment="center"
                android:theme="@style/Theme.Pomodoro" />

            <Button
                android:id="@+id/bnt_addTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:padding="6dp"
                android:text="@string/add_timer"
                android:textSize="24sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>